--- a/extension dial/style.css
+++ b/extension dial/style.css
@@ -2,74 +2,68 @@ body{
     background-color: #2e3440;
 }
 
-#all {
+#all{
+  --bg-color: rgb(107, 161, 179, 1);
   width: 200px;
   height: 60px;
   position: absolute;
   left: calc(50% - 100px);
   top: 5%;
   cursor: pointer;
-  transition: all 0.2s ease-in-out;
   font-size: 15px;
-  box-shadow: 0px 0px 20px 0px rgba(101, 101, 101, 0.1);
-  transition: all 0.5s ease-in-out;
+  transition: background 0.2s ease-in-out;
   padding-top: 40px;
-  vertical-align:middle;
   font-family: Raleway;
   text-align:center;
-    border-radius: 10px;
-    background-color: #3b4252;
-    color : #6ba1b3;
-    font-size: 18px;
+  color : #6ba1b3;
+  font-size: 18px;
+  background: linear-gradient(var(--bg-color) 0%,var(--bg-color));
+  background-position-y: 100px;
+  background-repeat: no-repeat;
+  border: 2px solid #6ba1b3;
 }
 
-#all p{
-  cursor: pointer;
-  width: 200px;
-  height: 100px;
-  vertical-align:middle;
-  font-family: Raleway;
-  text-align:center;
-  margin-top: 40px;
-  font-size: 17px;
-  background-color: #3b4252;
-  border-radius: 10px;
-  color:white;
+#all:hover{
+  background-position-y: 0px;
 }
 
-#all:hover {
-  box-shadow: 0px 0px 10px 0px rgba(140, 148, 163, 0.2);
-  color: white;
-  background-color: rgb(76, 86, 106);
-}
-
-#tabs {
-
-  position: absolute;
-  top: 20%;
-  width: 90%;
-  height: 73%;
-  left: 5%;
+#tabs{
+  display: block;
+  margin: 0 auto;
+  width:calc(510px*3 + 10px*6);
+  margin-top: 200px;
   text-align: center;
-  padding-top: 2%;
 }
 
 .tab {
   display: inline-block;
-  background-color: white;
-  width: 30%;
-  height: 40%;
-  padding-bottom: 2%;
-  box-shadow: 0px 3px 20px 0px rgba(101, 101, 101, 0.22);
-  margin-right: 1%;
-  margin-bottom: 1%;
-  transition: all 0.6s ease-in-out;
+  border: 2px solid var(--bg-color);
+  width: 500px;
+  height: 350px;
+  margin: 10px;
+  background: linear-gradient(var(--bg-color) 0%,var(--bg-color));
+  background-position-y: 350px;
+  background-repeat: no-repeat;
+  transition: all 0.4s ease-in-out;
   cursor: pointer;
+  text-align: left;
+}
+
+.tab:hover{
+  background-position-y: 0px;
 }
 
 img {
-  width: 45px;
+  --width: 40px;
+  width: var(--width);
   position: relative;
-  top: 45%;
-  opacity: 0;
+  top: calc(50% - var(--width)/2);
+  left:calc(50% - var(--width)/2);
+}
+
+svg{
+  --width: 40px;
+  position: relative;
+  top: calc(50% - var(--width)/2);
+  left:calc(50% - var(--width)/2);
 }
