mobile wordle UI

--- a/wordle/style.css
+++ b/wordle/style.css
@@ -8,7 +8,7 @@ body{
 
 #header{
   border-bottom: 1px solid #3a3a3c;
-  width: 25%;
+  width: 500px;
   min-width: 350px;
   margin:0 auto;
   height: 50px;
@@ -32,7 +32,7 @@ body{
 
 #tableDiv{
   position: absolute;
-  top: 20%;
+  top: 20vh;
 }
 
 table{
@@ -83,7 +83,7 @@ table .misplaced{
   margin: 0 auto;
   position: absolute;
   bottom: 10px;
-  width: 25%;
+  width: 500px;
   min-width: 350px;
 }
 
@@ -312,4 +312,16 @@ table .misplaced{
   justify-content: center;
   font-size: 12px;
   margin: 0;
+}
+
+@media only screen and (max-width: 500px) {
+  #tableDiv{
+    top: 15vh;
+  }
+  #keyboard{
+    width: 100%;
+  }
+  #header{
+    width: 100%;
+  }
 }
