--- a/motle/style.css
+++ b/motle/style.css
@@ -345,7 +345,7 @@ table .misplaced{
   margin: 0;
 }
 
-@media only screen and (max-width: 500px) {
+@media screen and (max-width: 500px) {
   #tableDiv{
     top: 15vh;
   }
