--- a/userChrome/userChrome.css
+++ b/userChrome/userChrome.css
@@ -32,6 +32,11 @@
 	min-height: 28px !important;
 }
 
+.tab-label[selected="true"]{
+	text-shadow: 0px 0px 3px black;
+}
+
+
 /* context menu*/
 #context-back, #context-forward,#context-reload,#context-stop,#context-bookmarkpage,#context-navigation,#context-savepage,#context-pocket,#context-sendpagetodevice,#context-selectall,
 #context-viewinfo,#context-sep-navigation,#context-sep-sendpagetodevice,#context-sep-viewbgimage{
@@ -58,6 +63,7 @@ display: none !important;
 }
 
 #urlbar .urlbarView{
+	-webkit-backdrop-filter:blur(10px) !important;
 	backdrop-filter:blur(10px) !important;
 	margin:0px !important;
 	width:100% !important;
@@ -348,6 +354,10 @@ tab[selected="true"][label*='Recherche Google'] .tab-background {
 tab[selected="true"][label='Nouvel onglet'] .tab-background {
 		background-color: #f6555c !important;
 		background: #f6555c !important;
+}
+
+tab stack vbox{
+	border:0px !important;
 }
 
 /*================== MAIN HEADER ==================*/
