--- a/kazakh/style.css
+++ b/kazakh/style.css
@@ -1,14 +1,23 @@
 html{
     margin:0 auto;
-    background-color:#eff0f4;
-    color:black;
+    background-color:#f9f8e2;
+    color:#5a4813;
     font-family: "Balsamiq Sans", sans-serif;
 }
 
 h1{
     font-weight: 700;
     text-align: center;
-    font-size: 60px;
+    font-size: 50px;
+    color:#f9f8e2;
+    background-color:#5a4813;
+    border-radius:50px;
+    padding-left: 30px;
+    padding-right: 30px;
+    margin:0 auto;
+    margin-top:30px;
+    width:fit-content;
+    box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.1);
 }
 
 #search_bar{
@@ -16,41 +25,60 @@ h1{
     width:750px;
     display:block;
     margin:0 auto;
-    margin-bottom:50px;
     margin-top:50px;
     border-radius:10px;
     border:none;
-    background-color:#e1e0d9;
+    background-color:#e7e0c4;
     background-image: url('searchicon.png');
     background-position: 10px 22.5px; 
     background-repeat: no-repeat;
     padding-left:50px;
     font-size:20px;
     font-family: "Balsamiq Sans", sans-serif;
+    box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.05);
+    position: relative;
+    z-index:20;
 }
 
 #search_bar:focus{
     outline:none;
 }
 
-#words{
+#words_outer{
     width:750px;
+    background-color: #ddd4ac;
+    border-bottom-left-radius: 30px;
+    border-bottom-right-radius: 30px;
+    margin: 0 auto;
+    height:400px;
+    overflow:hidden;
+    position: relative;
+    z-index:1;
+    padding-bottom:10px;
+}
+
+#words{
+    height:400px;
+    width:750px;
+    margin: 0 auto;
     display:flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    margin: 0 auto;
+    overflow-y: auto;
+    padding-bottom:10px;
 }
   
 .word{
     margin-left:2px;
     margin-right:2px;
-    margin-bottom: 10px;
+    margin-bottom: 0px;
     padding:5px;
     padding-left:15px;
     padding-right:15px;
     width:fit-content;
-    border:1.5px solid black;
-    border-bottom: 3px solid black;
+    height:fit-content;
+    border:1.5px solid #5a4813;
+    border-bottom: 3px solid #5a4813;
     border-radius:10px;
     text-align:center;
     font-size:20px;
@@ -58,6 +86,7 @@ h1{
     font-style: normal;
     cursor: pointer;
     text-transform: lowercase;
+    box-shadow:0 2px 2px rgba(0,0,0,0.1);
 }
 
 .word:nth-child(7n){
@@ -82,16 +111,28 @@ h1{
     background-color:#e6b8b8;
 }
 
+.divisor{
+    display:block;
+    width:400px;
+    margin:0 auto;
+    height:3px;
+    background-color:#5a4813;
+    margin-top:50px;
+    margin-bottom:50px;
+}
+
 @media only screen and (max-width: 700px) {
     #search_bar{
         width: 80%;
     }
 
-    #words{
+    #words_outer{
         width:90%;
-        display:block;
-        column-count: 2;
-        margin: 0 auto;
+    }
+
+    #words{
+        width:95%;
+        padding-top: 10px;
     }
 
     .word{
