--- a/kazakh/style.css
+++ b/kazakh/style.css
@@ -122,6 +122,10 @@ h1{
 }
 
 @media only screen and (max-width: 700px) {
+    h1{
+        font-size:30px;
+    }
+
     #search_bar{
         width: 80%;
     }
