--- a/kazakh/style.css
+++ b/kazakh/style.css
@@ -30,7 +30,7 @@ h1{
     border:none;
     background-color:#e7e0c4;
     background-image: url('searchicon.png');
-    background-position: 10px 22.5px; 
+    background-position: 15px 22.5px; 
     background-repeat: no-repeat;
     padding-left:50px;
     font-size:20px;
@@ -121,6 +121,77 @@ h1{
     margin-bottom:50px;
 }
 
+#guess_game{
+    width:750px;
+    margin:0 auto;
+    margin-top:50px;
+    display:block;
+    text-align:center;
+}
+
+#guess_game h2{
+    font-size:30px;
+    font-weight: 700;
+    margin:0;
+    margin-bottom:10px;
+}
+
+#guess_result{
+    font-size:20px;
+    color:#f9f8e2;
+    background-color:#5a4813;
+    border-radius:25px;
+    padding-left: 15px;
+    padding-right: 15px;
+    width:fit-content;
+    margin:0 auto;
+    margin-top:25px;
+}
+
+#guess_word{
+    height:61px;
+    width:260px;
+    display:inline-block;
+    margin:0 auto;
+    border:1.5px solid #5a4813;
+    border-bottom: 3px solid #5a4813;
+    border-radius:10px;
+    text-align:center;
+    font-size:20px;
+    font-weight: 400;
+    font-style: normal;
+    cursor: pointer;
+    text-transform: lowercase;
+    box-shadow:0 2px 2px rgba(0,0,0,0.1);
+    position: relative;
+    z-index:20;
+    vertical-align: middle;
+    line-height: 65px;
+    margin-top:-3px;
+}
+
+#guess_input{
+    padding:0;
+    height:65px;
+    width:250px;
+    display:inline-block;
+    margin:0 auto;
+    border-radius:10px;
+    border:none;
+    background-color:#e7e0c4;
+    padding-left:10px;
+    font-size:20px;
+    font-family: "Balsamiq Sans", sans-serif !important;
+    box-shadow: inset 0 5px 10px 0 rgba(0, 0, 0, 0.05);
+    position: relative;
+    z-index:20;
+    text-align:center;
+}
+
+#guess_input:focus{
+    outline:none;
+}
+
 @media only screen and (max-width: 700px) {
     h1{
         font-size:30px;
@@ -130,8 +201,12 @@ h1{
         width: 80%;
     }
 
-    #words_outer{
+    #words_outer,#guess_game{
         width:90%;
+    }
+
+    #guess_word{
+        margin-bottom:25px;
     }
 
     #words{
