--- a/kazakh/style.css
+++ b/kazakh/style.css
@@ -174,6 +174,8 @@ h1 .fa-sun{
     width:fit-content;
     margin:0 auto;
     margin-top:25px;
+    height:25px;
+    opacity:0;
 }
 
 #guess_word{
