--- a/kazakh/style.css
+++ b/kazakh/style.css
@@ -411,6 +411,85 @@ border-right: 1px solid black;
     border-bottom: 1px solid black;
 }
 
+#progress_div{
+    width:90%;
+    max-width:750px;
+    margin:0 auto;
+    margin-bottom:25px;
+    display:block;
+    text-align:center;
+    opacity:0;
+}
+
+#progress_div p{
+	background-color: #f4b900;
+	color: white;
+	width: fit-content;
+	padding: 5px;
+	padding-left: 10px;
+	padding-right: 10px;
+	border-radius: 20px;
+	border: 3px solid white;
+	box-shadow: 0px 5px 10px rgba(0,0,0,0.1);
+    opacity: 0;
+    animation: bob 4s ease-in-out infinite;
+    transform: translateX(-100%);
+    position: relative;
+    height:20px;
+}
+
+#progress_div p::after{
+    content: "";
+    height:10px;
+    width: 10px;
+    transform:rotate(45deg);
+    background-color:#f4b900;
+    border-bottom: 3px solid white;
+    border-right: 3px solid white;
+    display:block;
+    margin:0 auto;
+    margin-top: 2px;
+}
+
+@keyframes bob {
+    0% {
+        transform: translate(-50%,0);
+    }
+    50% {
+        transform: translate(-50%,-5px);
+    }
+    100% {
+        transform: translate(-50%,0);
+    }
+}
+
+#progress_div .total{
+    height:5px;
+    background-color: #ddcfaa;
+    border-radius:10px;
+    margin-bottom: 25px;
+}
+
+#progress_div .progress{
+    height:10px;
+    background-color: #f4b900;
+    border-radius:10px;
+    width:0%;
+    margin-top:-32.5px;
+    position:relative;
+    z-index: 1;
+}
+
+#progress_div .progress_total{
+    height:10px;
+    background-color: #ddcfaa;
+    border-radius:10px;
+    width:0%;
+    margin-top:-10px;
+    position:relative;
+    z-index:0;
+}
+
 @media only screen and (max-width: 700px) {
     h1{
         font-size:30px;
